Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3610

The argument names of mgs_write_log_pool() is misplaced

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.5.0
    • None
    • 3
    • 9166

      The argument 'fsname' and 'poolname' of mgs_write_log_pool() is misplaced. 'fsname' should be replaced by 'poolname', and 'poolname' should be replaced by 'fsname'. That is not a problem for machine, but might confuse some code readers, e.g. me.

            bobbielind Bobbie Lind (Inactive)
            lixi Li Xi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: