LU-3610 ptlrpc: Fix argument names of mgs_write_log_pool()

The argument 'fsname' and 'poolname' of mgs_write_log_pool()
is misplaced, which is confusing for code readers. This patch
fixes the problem.

What's more, 'lovname' is changed to 'tgtname', which might
be more preferable for more upcoming callers of the function.

Signed-off-by: Li Xi <lixi@ddn.com>
Change-Id: I08f11be7e2c99f623d22bec865f31476021c72bb
Reviewed-on: http://review.whamcloud.com/7044
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Bobbie Lind <bobbie.j.lind@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>